--- a/src/Components/myStyles.css
+++ b/src/Components/myStyles.css
@@ -278,7 +278,7 @@
 }
 .login-box{
     flex:0.7;
-    background-color: rgb(230, 11, 11);
+    background-color: rgb(189, 186, 186);
     border-radius: 20px;
     margin: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -346,7 +346,17 @@
     .sb-header{
         flex-direction: column;
         flex: 1;
-        /* width: min-content; */
+        width: min-content;
+    }
+    .chatArea-container{
+        flex: 1;
+    }
+    .sidebar-container{
+        flex: 0;
+    }
+    .main-container{
+        height: 100vh;
+        width: 100vh;
     }
     
 }
