--- a/src/Components/myStyles.css
+++ b/src/Components/myStyles.css
@@ -360,3 +360,11 @@
     }
     
 }
+.resister-container{
+    height: 90vh;
+    width: 90vw;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
